[project]
name = "views-hydranet"
version = "0.1.0"
description = "views-hydranet is a package that contains modeling procedure, evaluation and forecasting using HydraNet implemented in PyTorch"
authors = [
    {name = "Dylan",email = "52908667+smellycloud@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "views-pipeline-core (>=0.2.0,<1.0.0)",  
    "torch>=2.2.1,<3.0.0",  
    "torchvision>=2.5.0,<3.0.0",
    "torchaudio>=2.5.0,<3.0.0"
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
